--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,32 @@
 {
-    "name": "stream-interop/in-memory-byte-stream",
-    "description": "An implementation of the [stream-interop](https://github.com/stream-interop/stream-interop) interfaces for dealing with byte-only in-memory streams.",
+    "name": "stream-interop/impl",
+    "description": "Reference implementations for the stream-interop/interface package",
     "type": "library",
     "require": {
-        "stream-interop/stream-interop": "dev-master"
+        "stream-interop/interface": "1.x@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.2"
+        "phpunit/phpunit": "^11.5"
     },
     "license": "MIT",
     "authors": [
         {
             "name": "Nathan Bishop",
             "email": "nbish11@hotmail.com"
+        },
+        {
+            "name": "Paul M. Jones",
+            "email": "pmjones@pmjones.io"
         }
     ],
     "autoload": {
         "psr-4": {
-            "Interop\\Stream\\ByteStream\\": "src/"
+            "StreamInterop\\Impl\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Interop\\Stream\\ByteStream\\": "tests/"
+            "StreamInterop\\Impl\\": "tests/"
         }
     }
 }
