--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "stream-interop/interface": "1.x@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.5"
+        "phpunit/phpunit": "^11.0",
+        "phpstan/phpstan": "^2.0"
     },
     "license": "MIT",
     "authors": [
@@ -28,5 +29,11 @@
         "psr-4": {
             "StreamInterop\\Impl\\": "tests/"
         }
+    },
+    "scripts": {
+        "analyze": "./vendor/bin/phpstan analyze -c phpstan.neon",
+        "check": "composer test && composer analyze",
+        "test": "./vendor/bin/phpunit",
+        "test-coverage": "./vendor/bin/phpunit --coverage-html=./tmp/coverage"
     }
 }
